@@ -313,7 +313,7 @@ SOURCE=..\..\Objects\funcobject.c
 # End Source File
 # Begin Source File
 
-SOURCE=..\..\Modules\functionalmodule.c
+SOURCE=..\..\Modules\_functoolsmodule.c
 # End Source File
 # Begin Source File
 
